SFDCProject/src/objects/Referral_Input__c.object
<CustomObject>
    <fields>
        <fullName>Source_Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals (New Customers Contacts)</relationshipLabel>
        <relationshipName>Referrals_Input</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Contact_Last_Name__c</fullName>
        <label>Source Contact Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Contact_Name__c</fullName>
        <formula>Source_Contact_Id__r.FirstName + Source_Contact_Id__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Contact_Salutation__c</fullName>
        <label>Source Contact Salutation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Contact_Stop_Payment__c</fullName>
        <formula>Source_Contact_Id__r.Stop_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Contact Stop Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_ID__c</fullName>
        <formula>Source_Contact_Id__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Phone_Number__c</fullName>
        <label>Source Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Account_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referee Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Referrals_Input1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Account_Name__c</fullName>
        <label>Referee Account Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Address_City__c</fullName>
        <label>Referee Address City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Address_Country__c</fullName>
        <label>Referee Address Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Address_Postal_Code__c</fullName>
        <label>Referee Address Postal Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Address_State__c</fullName>
        <label>Referee Address State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Address_Street__c</fullName>
        <label>Referee Address Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Contact_ERP_Flag__c</fullName>
        <formula>IF( Target_Contact_Id__r.ERP_Contact_of_Record__c, &quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referee Contact ERP Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Contact_Email__c</fullName>
        <label>Referee Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Target_Contact_First_Name__c</fullName>
        <label>Referee Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referee Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referred By Contact</relationshipLabel>
        <relationshipName>Referrals_Input1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Contact_Last_Name__c</fullName>
        <label>Referee Contact Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Contact_Name__c</fullName>
        <formula>Target_Contact_Id__r.FirstName +  Target_Contact_Id__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Contact_Salutation__c</fullName>
        <label>Referee Contact Salutation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Contact_Stop_payment__c</fullName>
        <formula>Target_Contact_Id__r.Stop_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Contact Stop payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_ID__c</fullName>
        <formula>Target_Contact_Id__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Phone_Number__c</fullName>
        <label>Referee Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Target_Contact_Id__c</columns>
        <columns>Generation_Asset__c</columns>
        <columns>Promotion__c</columns>
        <columns>Customer_Portal_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Deb</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Deb</label>
    </listViews>
    <nameField>
        <displayFormat>REF-{0000000}</displayFormat>
        <label>Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Either_Target_Contact_or_Lead_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Target_Contact_Id__c ) &amp;&amp; ISBLANK( Lead__c )</errorConditionFormula>
        <errorMessage>Either Target Contact or Lead is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Promotion_can_not_be_changed</fullName>
        <active>true</active>
        <description>Promotion associated with a referral can not be changed after one of the referral payout status values is not null</description>
        <errorConditionFormula>AND
(
ISCHANGED(   Promotion__c  ),
OR(
TEXT(Milestone_1_Status__c) != &apos;&apos;,
TEXT(Milestone_2_Status__c) != &apos;&apos;, 
TEXT( Milestone_3_Status__c) != &apos;&apos;),
$User.ProfileId != &quot;00e60000000nGtn&quot;,
$User.ProfileId != &quot;00e60000001BXgk&quot;
)</errorConditionFormula>
        <errorDisplayField>Promotion__c</errorDisplayField>
        <errorMessage>Promotion can not be changed if referral is / has passed &apos;Qualified for Payment&apos; stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Referee_contact_can_not_be_changed</fullName>
        <active>true</active>
        <description>Referee Contact can not be changed if referral is / has passed &apos;Qualified for Payment&apos; stage.</description>
        <errorConditionFormula>AND
(
ISCHANGED(  Target_Contact_Id__c ),
OR(
TEXT(Milestone_1_Status__c) != &apos;&apos;,
TEXT(Milestone_2_Status__c) != &apos;&apos;, 
TEXT( Milestone_3_Status__c) != &apos;&apos;),
$User.ProfileId != &quot;00e60000000nGtn&quot;,
$User.ProfileId != &quot;00e60000001BXgk&quot;
)</errorConditionFormula>
        <errorDisplayField>Target_Contact_Id__c</errorDisplayField>
        <errorMessage>Referee Contact can not be changed if referral is / has passed &apos;Qualified for Payment&apos; stage.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Referrer_contact_can_not_be_changed</fullName>
        <active>true</active>
        <description>Referrer contact can not be changed if referral is / has passed  &apos;Qualified for Payment&apos; stage.</description>
        <errorConditionFormula>AND
(
ISCHANGED(  Source_Contact_Id__c ),
OR(
TEXT(Milestone_1_Status__c) != &apos;&apos;,
TEXT(Milestone_2_Status__c) != &apos;&apos;, 
TEXT( Milestone_3_Status__c) != &apos;&apos;),
$User.ProfileId != &quot;00e60000000nGtn&quot;,
$User.ProfileId != &quot;00e60000001BXgk&quot; 
)</errorConditionFormula>
        <errorDisplayField>Source_Contact_Id__c</errorDisplayField>
        <errorMessage>Referrer contact can not be changed if referral is / has passed  &apos;Qualified for Payment&apos; stage.</errorMessage>
    </validationRules>
</CustomObject>